--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<body>
+
 <div class="container">
     <div>
         <h1>Hello Spring</h1>
@@ -17,6 +17,6 @@
         </p>
     </div>
 
-
+</div>
 </body>
 </html>
