--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
-
 <div class="container">
     <div>
         <h1>Hello Spring</h1>
@@ -14,9 +12,16 @@
         <p>
             <a href="/members/new">회원 가입</a>
             <a href="/members">회원 목록</a>
+            <a href="/questions/new">질문 작성</a>
         </p>
     </div>
 
 </div>
+
+<div style="height: 50px;"></div>
+<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/search}" method="get">
+    <input style="width:80%; height: 80%" type="text" name="query" placeholder="Search"/>
+    <button type="submit" style="width:20%; height: 80%">Go</button>
+</form>
 </body>
 </html>
