--- a/src/main/resources/templates/questions/write.html
+++ b/src/main/resources/templates/questions/write.html
@@ -1,21 +1,35 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
 <body>
-
-<form action="/questions/new" method="post">
-  <div>
-    <label for="title">제목</label>
-    <input type="text" id="title" name="title" placeholder="제목을 입력하세요">
-  </div>
-  <div>
-    <label for="content">내용</label>
-    <textarea id="content" name="content" placeholder="내용을 입력하세요"></textarea>
-  </div>
-  <button type="submit">작성</button>
+<div style="height: 50px;"></div>
+<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/search}" method="get">
+  <input style="width:80%; height: 80%" type="text" name="query" placeholder="Search"/>
+  <button type="submit" style="width:20%; height: 80%">Go</button>
 </form>
+<div style="display:flex; align-items: center; justify-content: center; width: 100%; height: 100%;">
+  <form action="/questions/new" method="post" style="display: flex; flex-direction: column; align-items: center; justify-content: center; width: 50%; height: 50%;">
+    <div style="margin: 10px;">
+      <input type="text" id="title" name="title" placeholder="제목을 입력하세요" style="width: 100%; height: 30px; font-size: 18px;">
+    </div>
+    <div style="margin: 10px; text-align: center;">
+      <label for="content" style="font-size: 20px;">내용</label>
+      <textarea id="content" name="content" placeholder="내용을 입력하세요" style="width: 200%; height: 200px; font-size: 18px;"></textarea>
+    </div>
+    <div style="margin: 10px;">
+      <label for="tags" style="font-size: 18px;">태그</label>
+      <select id="tags" name="tags" style="width: 100%; height: 30px; font-size: 18px;">
+        <option value="Web">Web</option>
+        <option value="Reversing">Reversing</option>
+        <option value="Pawnable">Pawnable</option>
+        <option value="Crypto">Crypto</option>
+      </select>
+    </div>
+    <button type="submit" style="width: 50%; height: 30px; font-size: 18px;">작성</button>
+  </form>
+</div>
 </body>
 </html>
