--- a/src/main/resources/templates/questions/write.html
+++ b/src/main/resources/templates/questions/write.html
@@ -16,8 +16,8 @@
       <input type="text" id="title" name="title" placeholder="제목을 입력하세요" style="width: 100%; height: 30px; font-size: 18px;">
     </div>
     <div style="margin: 10px; text-align: center;">
-      <label for="content" style="font-size: 20px;">내용</label>
-      <textarea id="content" name="content" placeholder="내용을 입력하세요" style="width: 200%; height: 200px; font-size: 18px;"></textarea>
+      <label for="contents" style="font-size: 20px;">내용</label>
+      <textarea id="contents" name="contents" placeholder="내용을 입력하세요" style="width: 200%; height: 200px; font-size: 18px;"></textarea>
     </div>
     <div style="margin: 10px;">
       <label for="tags" style="font-size: 18px;">태그</label>
