--- a/src/main/resources/templates/questions/view.html
+++ b/src/main/resources/templates/questions/view.html
@@ -6,14 +6,14 @@
 <th:block layout:fragment="content">
     <div class="container">
         <div>
-            <h1 th:text="${ask.title}"></h1>
-            <p th:text="${ask.contents}"></p>
-            <p th:text="${ask.tags}"></p>
+            <h1 th:text="${asks.title}"></h1>
+            <p th:text="${asks.contents}"></p>
+            <p th:text="${asks.tags}"></p>
         </div>
     </div>
 
 </th:block>
-<form action="@{'/questions/'+ ${ask.no}}" method="post">
+<form action="@{'/questions/'+ ${ask.no}/comment}" method="post">
 <div id="comment-write">
     <input type="text" id="commentContents" placeholder="내용"><br>
     <button id="comment-write-btn">댓글 등록</button>
@@ -22,11 +22,11 @@
 <div id="comment-area">
     <table>
         <thead>
-        <tr>
-         <!--   <th th:text="${comment.comment_No}">댓글번호</th>
+        <tr th:each="comment: ${comment}">
+          <th th:text="${comment.commentNo}">댓글번호</th>
             <th>작성자</th>
             <th th:text="${comment.reply}">내용</th>
-            <th th:text="${comment.replyDate}"></th>-->
+            <th th:text="${comment.replyDate}"></th>
         </tr>
         </thead>
         <tbody>
