--- a/src/main/resources/templates/questions/view.html
+++ b/src/main/resources/templates/questions/view.html
@@ -15,7 +15,7 @@
 </th:block>
 <form action="@{'/questions/'+ ${ask.no}/comment}" method="post">
 <div id="comment-write">
-    <input type="text" id="commentContents" placeholder="내용"><br>
+    <input type="text" id="reply" placeholder="내용"><br>
     <button id="comment-write-btn">댓글 등록</button>
 </div>
 </form>
