--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,7 @@
             <a href="/members/new">회원 가입</a>
             <a href="/members">회원 목록</a>
             <a href="/questions/new">질문 작성</a>
+            <a href="/questions/questionList">질문리스트</a>
         </p>
     </div>
 
