--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,8 +20,8 @@
 </div>
 
 <div style="height: 50px;"></div>
-<form style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;" th:action="@{/search}" method="get">
-    <input style="width:80%; height: 80%" type="text" name="query" placeholder="Search"/>
+<form action="/search"     style="display:flex; width:50%; margin:auto; background-color: #00FF00; height: 50px; align-items: center; justify-content: center;"  method="post">
+    <input style="width:80%; height: 80%" type="text" name="search" placeholder="Search"/>
     <button type="submit" style="width:20%; height: 80%">Go</button>
 </form>
 </body>
