--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -10,9 +10,7 @@
         <h1>Hello Spring</h1>
         <p>회원 기능</p>
         <p>
-            <a href="/members/new">회원 가입</a>
-            <a href="/login/loginForm">로그인</a>
-
+            <a href="/home">로그아웃</a>
             <a href="/members">회원 목록</a>
             <a href="/questions/new">질문 작성</a>
             <a href="/questions/questionList">질문리스트</a>
